--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Basement">
     <title>Basement</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
@@ -43,7 +44,37 @@
             </nav>
         </header>
         <main>
-            
+
+            <div class="box">
+
+                <img src="images/basementlogo.png" alt="basement logo" class="basementlogo">
+
+                <img src="images/arrowup.png" alt="pil op" class="arrowup">
+
+            </div>
+
+            <img src="images/opslag1.png" alt="facebook opslag 1" class="opslag">
+
+            <img src="images/opslag2.png" alt="facebook opslag 2" class="opslag">
+
+            <div id="center1">
+                <div id="flex1">
+                    <a href="https://www.facebook.com/BasementBAAA/">
+                        <p>Læs mere</p>
+                    </a>
+                    <img src="images/facebookicon.png" alt="facebook logo" class="facebookicon">
+                </div>
+            </div>
+
+            <h2>Om Basement</h2>
+            <p class="omtekst">Basement er stedet hvor studerende fra Erhvervsakademi Aarhus mødes over en øl, et brætspil eller noget helt tredje.<br><br>Uanset hvad er fællesskabet og hyggen i centrum.<br><br>Vi arrangerer stand-up comedy, mini-koncerter, fester, quiz, turneringer, bingo og alt hvad ellers kan stables på benene af de studerende som arbejder i Basement.<br><br>Vores beliggenhed i kælderen af Sønderhøj 30, gør os til det ideelle sted for mange forskellige sociale aktiviteter, og her har vi samlet studerende på tværs af uddannelser siden 2012.</p>
+
+            <h2>Galleri</h2>
+
+            <img src="images/fest1.png" alt="fest" class="fest1">
+
+            <img src="images/fest2.png" alt="fest" class="fest2">
+
         </main>
         <footer>
             <div id="footer-logo">
